Exploring spacing issue on mobile.

--- a/public/style.css
+++ b/public/style.css
@@ -51,7 +51,6 @@ footer {
 
 .week {
     display: flex;
-    justify-content: space-around;
     padding: 10px;
 }
 
